app/10-namespace.yml
kind: Namespace
apiVersion: v1
metadata:
  name: net-policy-test
  annotations:
    net.beta.kubernetes.io/network-policy: |
      {
        "ingress": {
          "isolation": "DefaultDeny"
        }
      }
