app/20-net-policy.yml
kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
 name: db-accesss
 namespace: net-policy-test
spec:
 podSelector:
  matchLabels:
    role: db
 ingress:
  - from:
     - podSelector:
        matchLabels:
         role: api
    ports:
     - protocol: TCP
       port: 80
---
kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
 name: logger-access
 namespace: net-policy-test
spec:
 podSelector:
  matchLabels:
    role: logger
 ingress:
  - from:
     - podSelector:
         matchLabels:
         # Any pod within the namespace
    ports:
     - protocol: UDP
       port: 514
